# subsume

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RESEARCH_SUMMARY.md  deny.toml  justfile
.cargo/: config.toml
.claude/: CLAUDE.md
.cursor/rules/: subsume.mdc
.github/: settings.yml
.github/workflows/: ci.yml  publish.yml  python-publish.yml  rust-publish.yml
benches/: el_bench.rs  gaussian_bench.rs  taxobell_bench.rs
data/go_subset/: go_normalized.tsv
docs/: .gitignore  CENTER_OFFSET_REPRESENTATION.md  CLQA_EVAL.md  CONCEPTUAL_OVERVIEW.md  CONTAINMENT_PROBABILITY.md  END_TO_END_REVIEW.md  ENHANCEMENTS_SUMMARY.md  EXPLANATORY_STYLE_GUIDE.md  GAPS_ANALYSIS.md  GAPS_SUMMARY.md  GUMBEL_BOX_VOLUME.md  GUMBEL_MAX_STABILITY.md  IMPROVEMENTS_APPLIED.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_TEST_GAPS.md  LOCAL_IDENTIFIABILITY.md  LOG_SUM_EXP_INTERSECTION.md  MATHEMATICAL_FOUNDATIONS.md  MATH_DERIVATION_INDEX.md  MATH_EXPLANATION_GAPS.md  MATH_IMPROVEMENTS_SUMMARY.md  MATH_MARKUP_GUIDE.md  MATH_QUICK_REFERENCE.md  MATH_RENDERING_GUIDE.md  MATH_TO_CODE_CONNECTIONS.md  PAPER_REFERENCES_SUMMARY.md  PAPER_VERIFICATION.md  PRACTICAL_GUIDE.md  PROOF_IMPROVEMENTS_ANALYSIS.md  READING_GUIDE.md  README_KATEX.md  README_PREVIEW.md  README_RUSTDOC.md  REAL_TRAINING_EXAMPLES.md  RECENT_RESEARCH.md  REMAINING_WORK.md  REPRODUCING_PAPER_RESULTS.md  SUBSUMPTION.md  SUBSUMPTION_HISTORY.md  TYPST_IMPROVEMENTS.md  (+15 more)
docs/typst/: .gitignore  00-introduction.typ  07-applications.typ  08-future.typ  CRITIQUE.md  README.md  build.sh  containment-probability.typ  gumbel-box-volume.typ  gumbel-max-stability.typ  local-identifiability.typ  log-sum-exp-intersection.typ  preview.sh  subsumption.typ  template.typ
examples/: README.md  box_training.rs  cone_query_answering.rs  cone_training.rs  containment_hierarchy.rs  dataset_training.rs  density_el_demo.rs  el_benchmark.rs  el_benchmark_burn.rs  el_clqa_benchmark.rs  el_clqa_galen.rs  el_clqa_trained.rs  el_hyperparam_search.rs  el_training.rs  fuzzy_query.rs  gene_ontology.rs  geometry_comparison.rs  gumbel_box_exploration.rs  gumbel_box_training.rs  hyperbolic_demo.rs  imagenet_hierarchy.rs  lattix_bridge.rs  octagon_demo.rs  petgraph_adapter.rs  query2box.rs  region_generic.rs  save_checkpoint.rs  taxobell_box_uncertainty.rs  taxobell_demo.rs  taxobell_precinct.rs  taxobell_training.rs  wn18rr_ball.rs  wn18rr_ball_burn.rs  wn18rr_box_burn.rs  wn18rr_candle.rs  wn18rr_cone.rs  wn18rr_cone_burn.rs  wn18rr_geometry_comparison_burn.rs  wn18rr_training.rs  wn18rr_transbox_burn.rs
examples/el_clqa_galen/: learned.rs
experiments/: el_log.md  el_results.tsv
pretrained/: wordnet_subset.json
scripts/: benchmark_wn18rr.sh  convert_box2el.py  download_wn18rr.py  el_to_subsumption.py  gpu_benchmark.sh  gpu_results_v5.txt  local_sweep.sh  normalize_owl.py  plot_box_concept.py  plot_fuzzy_tnorms.py  plot_gumbel_robustness.py  plot_temperature_sensitivity.py  plot_training.py  run_clqa_eval.sh  run_el_benchmarks.sh  sweep_galen.sh  sweep_results.txt
src/: annular.rs  ball.rs  box_trait.rs  boxe.rs  center_offset.rs  clqa.rs  cone.rs  cone_el.rs  cone_query.rs  dataset.rs  density.rs  density_el.rs  distance.rs  el.rs  el_dataset.rs  el_training.rs  ellipsoid.rs  embedding.rs  fuzzy.rs  gaussian.rs  gumbel.rs  hyperbolic.rs  hyperbolic_box.rs  lattix_bridge.rs  lib.rs  metrics.rs  octagon.rs  optimizer.rs  petgraph_adapter.rs  quasimetric.rs  region.rs  sheaf.rs  spherical.rs  spherical_cap.rs  subspace.rs  taxobell.rs  taxobell_encoder.rs  taxonomy.rs  trainable.rs  trainer.rs  (+3 more)
src/candle_backend/: candle_box.rs  candle_gumbel.rs  distance.rs  mod.rs
src/ndarray_backend/: distance.rs  evaluation.rs  mod.rs  ndarray_box.rs  ndarray_cone.rs  ndarray_gumbel.rs  ndarray_octagon.rs  optimizer.rs  scheduler.rs
subsume-candle/: Cargo.toml  README.md
subsume-candle/examples/: candle_basic.rs  candle_concept2box.rs  candle_recent_research_metrics.rs  candle_regd_training.rs  candle_serialization.rs
subsume-candle/src/: candle_box.rs  candle_gumbel.rs  distance.rs  lib.rs
subsume-candle/tests/: candle_box_tests.rs
subsume-core/: Cargo.toml  README.md
subsume-core/benches/: box_ops.rs
subsume-core/src/: box_trait.rs  boxe.rs  center_offset.rs  dataset.rs  distance.rs  embedding.rs  gumbel.rs  hyperbolic.rs  hyperbolic_box.rs  lib.rs  optimizer.rs  quasimetric.rs  sheaf.rs  trainable.rs  trainer.rs  training.rs  utils.rs
subsume-core/tests/: property_tests.rs
subsume-ndarray/: Cargo.toml  README.md
subsume-ndarray/benches/: box_operations.rs  comparative_benchmarks.rs
subsume-ndarray/examples/: adam_training.rs  advanced_diagnostics.rs  automated_evaluation.rs  boxe_training.rs  collection.rs  complete_training_loop.rs  concept2box_joint_learning.rs  dataset_loading.rs  deep_diagnostics.rs  embedding_quality.rs  full_training_with_datasets.rs  geometric_operations.rs  hierarchical_classification.rs  knowledge_graph.rs  ndarray_basic.rs  real_training_boxe.rs  real_training_fb15k237.rs  real_training_wn18rr.rs  recent_research_metrics.rs  regd_training.rs  run_benchmarks.rs  serialization.rs  simple_training.rs  training_diagnostics.rs  training_utilities.rs  walk_hard_negatives.rs
subsume-ndarray/src/: benchmark.rs  distance.rs  edge_case_tests.rs  enriched_methods_tests.rs  evaluation.rs  invariant_tests.rs  lib.rs  matrix_e2e_tests.rs  ndarray_box.rs  ndarray_gumbel.rs  optimizer.rs  paper_verification_tests.rs  proptest_tests.rs  quantitative_verification_tests.rs  regression_tests.rs  scheduler.rs  trainer_integration_tests.rs
subsume-ndarray/tests/: resource_alloc.rs  walk_hard_negatives.rs
subsume-python/: Cargo.toml  README.md  pyproject.toml  subsumer.pyi
subsume-python/examples/: el_ontology.py  ontology_embedding.py  pykeen_interop.py
subsume-python/python/subsumer/: __init__.py  owl.py
subsume-python/src/: lib.rs
tests/: backend_parity.rs  candle_scrub.rs  gumbel_properties.proptest-regressions  gumbel_properties.rs  taxobell_e2e.rs  training_e2e.rs
(+36 files in other folders)
