[package]
name = "subsume"
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Geometric region embeddings (boxes, cones, octagons, Gaussians, hyperbolic intervals, sheaf networks) for subsumption, entailment, and logical query answering"
keywords = ["embeddings", "box-embeddings", "geometric", "subsumption", "ontology"]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
documentation = "https://docs.rs/subsume"
readme = "README.md"
publish = true
include = [
    "/src/**/*.rs",
    "/examples/**/*.rs",
    "/docs/katex-header.html",
    "/Cargo.toml",
    "/LICENSE-*",
    "/README.md",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
rand = { version = "0.9", optional = true }
hyperball = "0.1.1"
skel = "0.1.1"
ndarray = { version = "0.16", features = ["serde-1"], optional = true }
serde_json = { version = "1.0", optional = true }
candle-core = { version = "0.9", optional = true }
plotters = { version = "0.3", optional = true }

[features]
default = ["ndarray-backend"]
ndarray-backend = ["dep:ndarray", "dep:serde_json", "rand"]
candle-backend = ["dep:candle-core"]
rand = ["dep:rand"]
plotting = ["dep:plotters"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3"

[[bench]]
name = "gaussian_bench"
harness = false

[[bench]]
name = "el_bench"
harness = false

[[example]]
name = "taxobell_training"
required-features = ["candle-backend"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/katex-header.html"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
