[package]
name = "subsume"
version = "0.9.0"
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Geometric region embeddings (boxes, cones, octagons, Gaussians, hyperbolic intervals, sheaf networks) for subsumption, entailment, and logical query answering"
keywords = [
  "embeddings",
  "box-embeddings",
  "geometric",
  "subsumption",
  "ontology",
]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
documentation = "https://docs.rs/subsume"
readme = "README.md"
publish = true
include = [
  "/src/**/*.rs",
  "/examples/**/*.rs",
  "/docs/katex-header.html",
  "/Cargo.toml",
  "/LICENSE-*",
  "/README.md",
  "/pretrained/*.json",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
rand = { version = "0.9", optional = true }
hyperball = { version = "0.1.3", optional = true }
skel = { version = "0.1.1", optional = true }
ndarray = { version = "0.16", features = ["serde-1"], optional = true }
serde_json = { version = "1.0", optional = true }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
petgraph = { version = "0.7", optional = true }
rankops = { version = "0.1.4", optional = true }
lattix = { version = "0.6", default-features = false, features = ["kge"] }

[features]
default = ["ndarray-backend"]
ndarray-backend = ["dep:ndarray", "dep:serde_json", "rand"]
candle-backend = ["dep:candle-core", "dep:candle-nn"]
cuda = ["candle-backend", "candle-core/cuda"]
rand = ["dep:rand"]
petgraph = ["dep:petgraph"]
rankops = ["dep:rankops"]
sheaf = []
lattix = ["lattix/formats"]
spherical = []
density = []
hyperbolic = ["dep:hyperball", "dep:skel", "dep:ndarray"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3"

[[bench]]
name = "gaussian_bench"
harness = false

[[bench]]
name = "el_bench"
harness = false

[[example]]
name = "hyperbolic_demo"
required-features = ["hyperbolic"]


[[example]]
name = "taxobell_training"
required-features = ["candle-backend"]

[[example]]
name = "wn18rr_candle"
required-features = ["candle-backend"]

[[example]]
name = "wn18rr_cone"
required-features = ["candle-backend"]

[[example]]
name = "density_el_demo"
required-features = ["density", "rand"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/katex-header.html"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
