[package]
name = "subsume-candle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Candle implementation of subsume-core traits for box embeddings"
keywords = ["embeddings", "box-embeddings", "candle", "ml", "tensor"]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
homepage = "https://docs.rs/subsume-candle"
documentation = "https://docs.rs/subsume-candle"
readme = "README.md"

[dependencies]
subsume-core = { path = "../subsume-core" }
candle-core = "0.4"
serde = { workspace = true }
thiserror = { workspace = true }
# Force half to 2.3.1 to match candle-core's expectation (candle-core uses half 2.3.1)
# This prevents newer half 2.7.1 from being pulled in transitively
half = "=2.3.1"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"

[[example]]
name = "candle_serialization"
path = "examples/candle_serialization.rs"

