[package]
name = "subsume-candle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Candle implementation of subsume-core traits for box embeddings"
keywords = ["embeddings", "box-embeddings", "candle", "ml", "tensor"]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
homepage = "https://docs.rs/subsume-candle"
documentation = "https://docs.rs/subsume-candle"
readme = "README.md"

[dependencies]
subsume-core = { path = "../subsume-core" }
serde = { workspace = true }
thiserror = { workspace = true }

# ML Backend: Candle
# This crate provides the Candle implementation of subsume-core traits.
# For other backends, use:
#   - subsume-ndarray (pure ndarray, no ML framework)
#   - subsume-burn (future: Burn framework)
#   - subsume-ort (future: ONNX Runtime inference)
candle-core = "0.9"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"

[[example]]
name = "candle_serialization"
path = "examples/candle_serialization.rs"

[[example]]
name = "candle_recent_research_metrics"
path = "examples/candle_recent_research_metrics.rs"

[[example]]
name = "candle_concept2box"
path = "examples/candle_concept2box.rs"

[[example]]
name = "candle_regd_training"
path = "examples/candle_regd_training.rs"

