[package]
name = "subsume-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Framework-agnostic traits for geometric box embeddings (containment, entailment, overlap)"
keywords = ["embeddings", "box-embeddings", "geometric", "containment", "entailment", "nlp", "ml"]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
homepage = "https://docs.rs/subsume-core"
documentation = "https://docs.rs/subsume-core"
readme = "README.md"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true, optional = true }

[features]
default = []
rand = ["dep:rand"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
tempfile = "3"

[[bench]]
name = "box_ops"
harness = false
