[package]
name = "subsume-ndarray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ndarray implementation of subsume-core traits for box embeddings"
keywords = ["embeddings", "box-embeddings", "ndarray", "ml", "array"]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
homepage = "https://docs.rs/subsume-ndarray"
documentation = "https://docs.rs/subsume-ndarray"
readme = "README.md"

[dependencies]
subsume-core = { path = "../subsume-core" }
ndarray = { version = "0.16", features = ["serde-1"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
serde_json = "1.0"

[[example]]
name = "knowledge_graph"
path = "examples/knowledge_graph.rs"

[[example]]
name = "serialization"
path = "examples/serialization.rs"

[[example]]
name = "geometric_operations"
path = "examples/geometric_operations.rs"

[[bench]]
name = "box_operations"
harness = false

