[package]
name = "subsume-ndarray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ndarray implementation of subsume-core traits for box embeddings"
keywords = ["embeddings", "box-embeddings", "ndarray", "ml", "array"]
categories = ["science", "algorithms"]
repository = "https://github.com/arclabs561/subsume"
homepage = "https://docs.rs/subsume-ndarray"
documentation = "https://docs.rs/subsume-ndarray"
readme = "README.md"

[dependencies]
subsume-core = { path = "../subsume-core", version = "0.1.0", features = ["rand"] }
ndarray = { version = "0.16", features = ["serde-1"] }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "point_series"], optional = true }
rand = { workspace = true }

[features]
default = []
plotting = ["plotters"]
rand = []  # For cfg gating in tests

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
serde_json = "1.0"

[[example]]
name = "knowledge_graph"
path = "examples/knowledge_graph.rs"

[[example]]
name = "serialization"
path = "examples/serialization.rs"

[[example]]
name = "geometric_operations"
path = "examples/geometric_operations.rs"

[[example]]
name = "recent_research_metrics"
path = "examples/recent_research_metrics.rs"

[[example]]
name = "concept2box_joint_learning"
path = "examples/concept2box_joint_learning.rs"

[[example]]
name = "regd_training"
path = "examples/regd_training.rs"

[[example]]
name = "complete_training_loop"
path = "examples/complete_training_loop.rs"

[[example]]
name = "dataset_loading"
path = "examples/dataset_loading.rs"

[[example]]
name = "full_training_with_datasets"
path = "examples/full_training_with_datasets.rs"

[[example]]
name = "adam_training"
path = "examples/adam_training.rs"

[[example]]
name = "boxe_training"
path = "examples/boxe_training.rs"

[[example]]
name = "automated_evaluation"
path = "examples/automated_evaluation.rs"
required-features = ["plotting"]

[[example]]
name = "run_benchmarks"
path = "examples/run_benchmarks.rs"

[[example]]
name = "simple_training"
path = "examples/simple_training.rs"

[[example]]
name = "real_training_wn18rr"
path = "examples/real_training_wn18rr.rs"

[[example]]
name = "real_training_fb15k237"
path = "examples/real_training_fb15k237.rs"

[[example]]
name = "real_training_boxe"
path = "examples/real_training_boxe.rs"

[[example]]
name = "hierarchical_classification"
path = "examples/hierarchical_classification.rs"

[[bench]]
name = "comparative_benchmarks"
harness = false

[[bench]]
name = "box_operations"
harness = false

