[package]
name = "subsume-python"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for subsume geometric KG embeddings"
publish = false

[lib]
name = "subsume_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
subsume = { path = "..", features = ["ndarray-backend"] }
ndarray = "0.16"
serde_json = "1.0"

[workspace]
