[package]
name = "subsume-python"
version = "0.8.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for subsume geometric KG embeddings"
publish = false

[lib]
name = "subsumer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
numpy = "0.25"
subsume = { path = "..", features = ["ndarray-backend"] }
ndarray = "0.16"
serde_json = "1.0"
candle-core = { version = "0.9", optional = true }

[features]
candle-backend = ["subsume/candle-backend", "dep:candle-core"]
cuda = ["candle-backend", "subsume/cuda", "candle-core/cuda"]

[workspace]
