[package]
name = "subsume-python"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Python bindings for subsume geometric KG embeddings"
publish = false

[lib]
name = "subsumer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
numpy = "0.29"
subsume = { path = "..", features = ["ndarray-backend"] }
ndarray = "0.16"
serde_json = "1.0"
burn = { version = "0.20", optional = true }
burn-ndarray = { version = "0.20", optional = true }
burn-autodiff = { version = "0.20", optional = true }

[features]
burn-backend = ["subsume/burn-ndarray", "dep:burn", "dep:burn-ndarray", "dep:burn-autodiff"]

[workspace]
