[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "subsumer"
version = "0.7.0"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]
description = "Geometric region embeddings for knowledge graph subsumption (Python bindings for the subsume Rust crate)"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features = ["pyo3/extension-module"]
